Update Industry day

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -102,10 +102,13 @@ title: Industry Day
             <p class="fs-6 text-end fw-bold">8:15am - 8:20am<br />(5 mins)</p>
           </div>
           <div class="col-9">
-            <p class="fs-6 fw-bold mb-0">Welcome</p>
-            <p class="fs-6">
+            <p class="fs-6 fw-bold mb-0">Land Acknowledgement and Welcome</p>
+            <p class="fs-6 m-0">
               <a href="#henry-leung">Professor Henry Leung</a> - Conference
               General Chair
+            </p>
+            <p class="fs-6">
+              Luis Moura - Smart City Program Manager, The City of Calgary
             </p>
           </div>
         </div>
@@ -120,7 +123,9 @@ title: Industry Day
             <p class="fs-6">
               <a href="#jan-bradley-keynote">Jan Bradley</a> - Chief Information
               and Technology Officer, The City of Calgary. Co-presented with The
-              City of Calgary IT team
+              City of Calgary IT team: <a href="#kelly-brown">Kelly Brown</a>,
+              <a href="#colin-adderley">Colin Adderley</a>,
+              <a href="#ashiq-rahman">Dr. Ashiq Rahman</a>.
             </p>
             <p class="fs-6 fw-normal">
               The City of Calgary is leading the way in technological innovation
@@ -145,21 +150,18 @@ title: Industry Day
         <!-- 9:10 - 10:00 -->
         <div class="row fs-4 g-4 fs-6">
           <div class="col-3">
-            <p class="fs-6 text-end fw-bold">
-              9:10am - 10:00am <br />(50 mins)
-            </p>
+            <p class="fs-6 text-end fw-bold">9:10am - 10:00am <br /></p>
           </div>
           <div class="col-9">
             <p class="fs-6 fw-bold">
               Modernize Public Services with Emerging Technologies
             </p>
           </div>
-          <div class="col-3">
-            <p class="fs-6 text-end fw-bold">(20 mins)</p>
-          </div>
+          <div class="col-3"></div>
           <div class="col-9">
             <p class="fs-6 fw-bold mb-0">
-              Synthetic Modeling for Rocky View County
+              Visibly Better Futures: Unlocking Opportunity through 6D People,
+              Place, and Scenario Intelligence
             </p>
             <p class="fs-6 fw-normal">
               by <a href="#byron-riemann">Byron Riemann</a>, COO of Rocky View
@@ -167,23 +169,20 @@ title: Industry Day
               Experience Officer of RWI Synthetic
             </p>
           </div>
-          <div class="col-3">
-            <p class="fs-6 text-end fw-bold">(20 mins)</p>
-          </div>
+          <div class="col-3"></div>
           <div class="col-9">
-            <p class="fs-6 fw-bold mb-0">Digital Twins</p>
+            <p class="fs-6 fw-bold mb-0">
+              Digital Twins: The Journey and Destination of Building a Virtual
+              City
+            </p>
             <p class="fs-6 fw-normal">
               by <a href="#melanie-mackenzie">Melanie MacKenzie</a>, Manager,
               Geospatial Business Solution, The City of Calgary
             </p>
           </div>
-          <div class="col-3">
-            <p class="fs-6 text-end fw-bold">(15 mins)</p>
-          </div>
+          <div class="col-3"></div>
           <div class="col-9">
-            <p class="fs-6 fw-bold mb-0">
-              The City of Calgary Traffic Management
-            </p>
+            <p class="fs-6 fw-bold mb-0">Future of Traffic Management</p>
             <p class="fs-6 fw-normal">
               by <a href="#zi-wang">Zi Wang</a>, Leader of Congestion Mgmt and
               Smart Mobility, The City of Calgary
@@ -225,9 +224,7 @@ title: Industry Day
         <!-- 10:40 - 11:55 -->
         <div class="row fs-4 g-4 fs-6 fw-bold">
           <div class="col-3">
-            <p class="fs-6 text-end fw-bold">
-              10:40am - 11:55am <br />(75 mins)
-            </p>
+            <p class="fs-6 text-end fw-bold">10:40am - 11:55am</p>
           </div>
           <div class="col-9">
             <p class="fs-6 fw-bold">
@@ -238,7 +235,10 @@ title: Industry Day
             <p class="fs-6 text-end fw-bold">(15 mins)</p>
           </div>
           <div class="col-9">
-            <p class="fs-6 fw-bold mb-0">AI Data Center and Infrastructure</p>
+            <p class="fs-6 fw-bold mb-0">
+              Architecting the Future of AI: Critical Infrastructure Innovation
+              at Denvr DataWorks
+            </p>
             <p class="fs-6 fw-normal">
               by <a href="#marc-kronewitt">Marc Kronewitt</a>, Executive Officer
               of Business Development for Denvr Dataworks
@@ -476,10 +476,18 @@ title: Industry Day
             <p class="fs-6 mb-2">
               Moderator: <a href="#katanya-kuntz">Dr. Katanya Kuntz</a>
             </p>
-            <p class="fs-6 fw-normal">
+            <p class="fs-6 fw-normal mb-2">
               Engaging and expert-led discussions on the development,
               challenges, and real-world applications of quantum technologies.
               The panel will also explore the intersection of Quantum and AI
+            </p>
+            <p class="fs-6 fw-normal">
+              <a href="#bob-wold">Bob Wold</a>, CEO of Quantum Rings <br />
+              <a href="#lindsay-leblanc">Lindsay LeBlanc</a>, Professor,
+              University of Alberta & Canada Research Chair in Atomic Quantum
+              Science and Technology <br />
+              <a href="#greg-dick">Greg Dick</a>, CEO of Open Quantum Design
+              <br />
             </p>
           </div>
         </div>
@@ -494,7 +502,9 @@ title: Industry Day
           </div>
           <div class="col-9">
             <p class="fs-6 fw-bold mb-0">Youth AI for Good presentations</p>
-            <p class="fs-6 fw-normal mb-2">Moderator: Dr. Henry Leung</p>
+            <p class="fs-6 fw-normal mb-2">
+              Moderator: <a href="#henry-leung">Dr. Henry Leung</a>
+            </p>
             <p class="fs-6 fw-normal">
               Our bright young minds will share their perspectives and visionary
               ideas on harnessing AI and other emerging technologies for social
@@ -792,7 +802,7 @@ title: Industry Day
     </div>
   </div>
   <!-- Bob Wold -->
-  <div class="row" id="byron-riemann">
+  <div class="row" id="bob-wold">
     <div
       class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
     >
@@ -872,7 +882,7 @@ title: Industry Day
     </div>
   </div>
   <!-- C. Ashiq Rahman -->
-  <div class="row">
+  <div class="row" id="ashiq-rahman">
     <div
       class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
     >
@@ -1087,7 +1097,7 @@ title: Industry Day
     </div>
   </div>
   <!-- Greg Dick -->
-  <div class="row" id="girish-limaye">
+  <div class="row" id="greg-dick">
     <div
       class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
     >
@@ -1358,7 +1368,7 @@ title: Industry Day
     </div>
   </div>
   <!-- Kelly Brown -->
-  <div class="row">
+  <div class="row" id="kelly-brown">
     <div
       class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
     >
@@ -1409,7 +1419,7 @@ title: Industry Day
     </div>
   </div>
   <!-- Lindsay LeBlanc -->
-  <div class="row" id="kyle-mckrindle">
+  <div class="row" id="lindsay-leblanc">
     <div
       class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
     >
