--- a/uic/index.html
+++ b/uic/index.html
@@ -124,6 +124,10 @@ title: IEEE UIC 2025
             <h5 class="fs-6 fw-bold">Program Vice Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
+                Biyuan Yao <br />
+                Hainan University, China
+              </h5>
+              <h5 class="fs-6">
                 Jin Sun <br />
                 Nanjing University of Science and Technology, China
               </h5>
