Update Industry day

--- a/program/index.html
+++ b/program/index.html
@@ -53,9 +53,7 @@ title: Program
                 <!-- 13:00 - 15:00 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      1:00pm - 3:00pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">1:00pm - 3:00pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Tutorial Session 1</p>
@@ -65,9 +63,7 @@ title: Program
                 <!-- 15:00 - 15:30 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      3:00pm - 3:30pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">3:00pm - 3:30pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Coffee Break</p>
@@ -77,9 +73,7 @@ title: Program
                 <!-- 15:30 - 17:30 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      3:30pm - 5:30pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">3:30pm - 5:30pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Tutorial Session 2</p>
@@ -89,9 +83,7 @@ title: Program
                 <!-- 18:00 - 20:00 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      6:00pm - 8:00pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">6:00pm - 8:00pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Reception</p>
@@ -114,9 +106,7 @@ title: Program
                 <!-- 8:00 - 5:30 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      8:00am - 5:30pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">8:00am - 5:30pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold">Industry Day</p>
@@ -153,9 +143,7 @@ title: Program
                 <!-- 8:30 - 9:00 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      8:30am - 9:00am<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">8:30am - 9:00am<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Opening</p>
@@ -165,9 +153,7 @@ title: Program
                 <!-- 9:00 - 10:00  -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      9:00am - 10:00am<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">9:00am - 10:00am<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Keynote 3</p>
@@ -177,9 +163,7 @@ title: Program
                 <!-- 10:00 - 10:30 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      10:00am - 10:30am<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">10:00am - 10:30am<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Coffee Break</p>
@@ -189,9 +173,7 @@ title: Program
                 <!-- 10:30 - 12:00 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      10:30am - 12:00pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">10:30am - 12:00pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Technical Session 1</p>
@@ -201,9 +183,7 @@ title: Program
                 <!-- 12:00 - 13:00 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      12:00pm - 1:00pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">12:00pm - 1:00pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Lunch</p>
@@ -213,9 +193,7 @@ title: Program
                 <!-- 13:00 - 14:30 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      1:00pm - 2:30pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">1:00pm - 2:30pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">
@@ -227,9 +205,7 @@ title: Program
                 <!-- 14:30 - 15:30 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      2:30pm - 3:30pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">2:30pm - 3:30pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Technical Session 2</p>
@@ -239,9 +215,7 @@ title: Program
                 <!-- 15:30 - 16:00 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      3:30pm - 4:00pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">3:30pm - 4:00pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Coffee Break</p>
@@ -251,9 +225,7 @@ title: Program
                 <!-- 16:00 - 17:30 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      4:00pm - 5:30pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">4:00pm - 5:30pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Technical Session 3</p>
@@ -280,9 +252,7 @@ title: Program
                 <!-- 8:30 - 09:30 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      8:30am - 09:30am<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">8:30am - 09:30am<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Keynote 4</p>
@@ -292,9 +262,7 @@ title: Program
                 <!-- 9:30 - 9:50  -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      9:30am - 9:50am<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">9:30am - 9:50am<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Coffee Break</p>
@@ -304,9 +272,7 @@ title: Program
                 <!-- 9:50 - 10:50 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      9:50am - 10:50am<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">9:50am - 10:50am<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Panel Discussion 2</p>
@@ -316,9 +282,7 @@ title: Program
                 <!-- 10:50 - 12:20 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      10:50am - 12:20pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">10:50am - 12:20pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Technical Session 4</p>
@@ -328,9 +292,7 @@ title: Program
                 <!-- 12:20 - 13:15 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      12:20pm - 1:15pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">12:20pm - 1:15pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Lunch</p>
@@ -340,9 +302,7 @@ title: Program
                 <!-- 13:15 - 14:15 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      1:15pm - 2:15pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">1:15pm - 2:15pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Keynote 5</p>
@@ -352,9 +312,7 @@ title: Program
                 <!-- 14:15 - 15:45 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      2:15pm - 3:45pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">2:15pm - 3:45pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">
@@ -366,9 +324,7 @@ title: Program
                 <!-- 15:45 - 16:00 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      3:45pm - 4:00pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">3:45pm - 4:00pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Coffee Break</p>
@@ -378,9 +334,7 @@ title: Program
                 <!-- 16:00 - 17:30 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      4:00pm - 5:30pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">4:00pm - 5:30pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Technical Session 5</p>
@@ -391,9 +345,7 @@ title: Program
                 <!-- 18:00 - 21:00 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      6:00pm - 9:00pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">6:00pm - 9:00pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Banquet</p>
@@ -419,9 +371,7 @@ title: Program
                 <!-- 8:30 - 9:00 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      8:30am - 9:30am<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">8:30am - 9:30am<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Keynote 6</p>
@@ -431,9 +381,7 @@ title: Program
                 <!-- 9:30 - 9:50  -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      9:30am - 9:50am<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">9:30am - 9:50am<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Coffee Break</p>
@@ -443,9 +391,7 @@ title: Program
                 <!-- 9:50 - 10:50 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      9:50am - 10:50am<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">9:50am - 10:50am<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Panel Discussion 3</p>
@@ -455,9 +401,7 @@ title: Program
                 <!-- 10:50 - 12:30 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      10:50am - 12:30pm<br />
-                    </p>
+                    <p class="fs-6 text-end fw-bold">10:50am - 12:30pm<br /></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Technical Session 6</p>
