--- a/program/index.html
+++ b/program/index.html
@@ -424,9 +424,7 @@ title: Program
                 <!-- 8:30 - 9:00 -->
                 <div class="row fs-4 fs-6">
                   <div class="col-sm-3">
-                    <p class="fs-6 text-center fw-bold">
-                      8:30am - 9:30am<br />
-                    </p>
+                    <p class="fs-6 text-center fw-bold"></p>
                   </div>
                   <div class="col-sm-9">
                     <p class="fs-6 fw-bold mb-0">Group Trip to Banff</p>
